<resources>
    <string name="app_name">CoffeQR</string>
    <string name="menu_qr">Coffe Bar QR</string>

    <string name="title_appbar_layout">Caffe Bar</string>
    <string name="abrir_menu">Abrir Menu</string>
    <string name="nave">nave</string>
    <string name="itemCafe">Cafe americano</string>
    <string name="itemprecio">$</string>
    <string name="number">1</string>
    <string name="mostrar_Dolar">añadir %1$d</string>
    <string name="escan_qr">Escanea tu codigo QR aqui</string>
    <string name="detalles_de_pedido">Detalles de pedido</string>
    <string name="cantidad">Cantidad</string>
    <string name="cancel">Cancelar</string>
    <string name="si">Si</string>
    <string name="agrega_orden">Envia tu pedido aqui</string>
    <string name="enviar_orden">Enviar orden</string>
    <string name="descripcion">Descripcion:</string>
    <string name="zero">0</string>
    <string name="total_a_pagar">Total a pagar</string>
    <string name="pagar_en_efectivo">Pagar en efectivo</string>
    <string name="pagar_tarjeta">Pagar con Tarjeta</string>
    <string name="numero_tajeta">0000–0000-0000-0000</string>
    <string name="nombre_de_tarjeta">Nombre</string>
    <string name="fecha_tarjeta">Fecha</string>
    <string name="cvv">CVV</string>
    <string name="realizar_pago">Realizar pago</string>
    <string name="todos_los_derechos_reservados">Todos los Derechos Reservados</string>
    <string name="cancelar_pedido">¿Cancelar Pedido? </string>
    <string name="eliminar_pedido">¿Deseas eliminar este pedido?</string>
    <string name="eliminara_este_pedido">Se eliminara este pedido de tu orden</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="escanear_qr">Escanear QR</string>
    <string name="tu_orden_esta_en_camino">Tu orden esta en camino</string>
    <string name="realiza_tu_pago">Realiza tu pago</string>
    <string name="detalles_de_tu_orden">Detalles de tu orden</string>
    <string name="no_cierres_la_aplicacion">No cierres la aplicacion</string>

</resources>