<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Screens.ActivityPagos">

    <TextView
        android:id="@+id/header_pagos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realiza_tu_pago"
        android:layout_marginTop="-60dp"
        android:textSize="30sp"
        android:textColor="@color/color_new"
        />


    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGrayligth"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btn_efectivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/desing_button_all"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/pagar_en_efectivo"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:backgroundTint="@color/darkGrayligth"
        android:background="@drawable/desing_layout_2"
        >
        <Button
            android:id="@+id/btn_tarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:drawableTop="@drawable/icon_credit_card"
            android:background="@drawable/desing_button_all"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/pagar_tarjeta"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_tarjeta_expadible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/desing_layout_2"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/numero_tarjeta"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_form_card_credit"
                android:drawableStart="@drawable/custom_edit_text_number_focused"
                android:drawablePadding="12dp"
                android:ems="10"
                android:maxLength="16"
                android:hint="@string/numero_tajeta"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor,RtlSymmetry" />

            <EditText
                android:id="@+id/edi_text_name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_form_card_credit"
                android:drawableStart="@drawable/custom_edit_text_name_focused"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/nombre_de_tarjeta"
                android:inputType="text"
                android:maxLength="20"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numero_tarjeta"
                tools:ignore="Autofill,LabelFor,RtlSymmetry" />

            <EditText
                android:id="@+id/editext_fecha"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_form_card_credit"
                android:ems="10"
                android:hint="@string/fecha_tarjeta"
                android:inputType="datetime"
                android:maxLength="4"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/editext_cvv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edi_text_name"
                tools:ignore="Autofill,LabelFor,RtlCompat" />

            <EditText
                android:id="@+id/editext_cvv"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_form_card_credit"
                android:ems="10"
                android:hint="@string/cvv"
                android:inputType="number"
                android:maxLength="3"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edi_text_name"
                tools:ignore="Autofill,LabelFor,MissingConstraints,RtlCompat" />

            <Button
                android:id="@+id/button_realizar_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/desing_button_all"
                android:drawableTop="@drawable/icon_money"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/realizar_pago"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editext_fecha" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>



</LinearLayout>