<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="18dp"
    android:layout_gravity="center_horizontal"
    app:cardElevation="12dp"
    app:cardCornerRadius="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/tabmenu">
        <ImageView
            android:id="@+id/imageView"
            android:background="@color/white"
            android:layout_width="120dp"
            android:layout_height="130dp"
            tools:src="@drawable/logo_cafesito"
            tools:ignore="ContentDescription"
            />

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreCafe"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="19sp"
                tools:text="@string/itemCafe" />

            <TextView
                android:id="@+id/precioCafe"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                tools:text="@string/itemprecio" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:layout_gravity="center_horizontal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:src="@drawable/add_icon"
                tools:ignore="ContentDescription" />

            <TextView

                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/white"
                tools:text="@string/number"
                />
            <ImageButton
                android:layout_gravity="center_horizontal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#00FFFFFF"
                android:src="@drawable/remove_icon"
                tools:ignore="ContentDescription" />

        </LinearLayout>



    </LinearLayout>


</androidx.cardview.widget.CardView>