<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardElevation="12dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/tabmenu">
        <ImageView
            android:id="@+id/ItemImagen"
            android:background="@color/white"
            android:layout_width="90dp"
            android:layout_height="100dp"
            tools:src="@drawable/logo_cafesito"
            tools:ignore="ContentDescription"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ItemMesa"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19sp"
                tools:text="Mesa 1" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                >
                <TextView
                    android:id="@+id/nombreItem"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    tools:text="@string/itemCafe" />
                <TextView
                    android:id="@+id/precioItem"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    tools:text="@string/itemprecio" />

            </LinearLayout>
            <LinearLayout
                android:layout_gravity="end"
                android:orientation="vertical"
                android:layout_marginTop="-46dp"
                android:layout_marginEnd="20dp"
                android:layout_width="100dp"
                android:layout_height="45dp">
                <TextView
                    android:id="@+id/ItemTextoCantidad"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:text="@string/cantidad" />

                <TextView
                    android:id="@+id/ItemCantidad"
                    android:layout_width="28dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    tools:text="2" />

            </LinearLayout>






        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>